@startuml

title __CALENDAR's Class Diagram__\n

  namespace model {
    namespace calendar {
      class model.calendar.Calendar {
          {static} + instance : Calendar
          - actualDay : int
          - cont : int
          - random : int
          - seasonList : ArrayList<Seasons>
          - weatherList : ArrayList<Weather>
          + getDay()
          {static} + getInstance()
          + getSeason()
          + getWeather()
          + inc()
          + setSeason()
          + setWeather()
          - Calendar()
          - randomWeather()
          - verifySeason()
      }
    }
  }
  

  namespace model {
    namespace calendar {
      enum Seasons {
        AUTUMN
        SPRING
        SUMMER
        WINTER
        name
      }
    }
  }
  

  namespace model {
    namespace calendar {
      enum Weather {
        CLOUDY
        RAINY
        SNOWY
        SUNNY
        name
      }
    }
  }
  

  namespace model {
    namespace calendar {
      interface model.calendar.CalendarInt {
          {abstract} + getDay()
          {abstract} + getSeason()
          {abstract} + getWeather()
          {abstract} + inc()
          {abstract} + setSeason()
          {abstract} + setWeather()
      }
    }
  }
  

  model.calendar.Calendar .up.|> CalendarInt
  model.calendar.Calendar o-- model.calendar.Calendar.Seasons : seasons
  model.calendar.Calendar o-- model.calendar.Calendar.Weather : weather
  model.calendar.Calendar +-down- model.calendar.Calendar.Seasons
  model.calendar.Calendar +-down- model.calendar.Calendar.Weather


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
